--- a/StockDosBons-main/StockDosBons-main/src/pages/Furniture/index.html
+++ b/StockDosBons-main/StockDosBons-main/src/pages/Furniture/index.html
@@ -85,14 +85,14 @@
 
           <div class="card" tabindex="9">
             <div class="imgElement">
-              <img src="../../assets/electronicsImgs/img-3.jpg" alt="imagem ilustratica">
+              <img src="../../assets/furnitureImgs/img-3.webp" alt="imagem de Estantes">
               
               <p class="tag">Móveis</p>
             </div>
             
             <div class="cardContent">
               <div class="textContainer">
-                <h2>Microondas</h2>
+                <h2>Estantes</h2>
 
                 <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos</p>
               </div>
