alterações pequenas no html.

--- a/StockDosBons-main/StockDosBons-main/src/pages/Electronics/index.html
+++ b/StockDosBons-main/StockDosBons-main/src/pages/Electronics/index.html
@@ -48,7 +48,7 @@
             
             <div class="cardContent">
               <div class="textContainer">
-                <h2>Sansung A24</h2>
+                <h2>Samsung A24</h2>
 
                 <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos</p>
               </div>
@@ -70,7 +70,7 @@
             
             <div class="cardContent">
               <div class="textContainer">
-                <h2>Airfryer Sansung</h2>
+                <h2>Airfryer Samsung</h2>
 
                 <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos</p>
               </div>
